tests/dataset/tpc-ds/compiler/pl/q29.error
run: exit status 2
[
  {
    "catalog_sales_quantity":0,
    "i_item_desc":"Desc1",
    "i_item_id":"ITEM1",
    "s_store_id":"S1",
    "s_store_name":"Store1",
    "store_returns_quantity":0,
    "store_sales_quantity":0
  }
]
ERROR: /tmp/q29.pl:64: user:main Unknown message: error('expect failed')
